<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorActivityTitle"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/spotify_streamer_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:layout_below="@id/title"
        android:text="@string/spotify_streamer"/>
    <Button
        android:id="@+id/score_app_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:layout_below="@id/spotify_streamer_button"
        android:text="@string/score_app"/>
    <Button
        android:id="@+id/library_app_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:layout_below="@id/score_app_button"
        android:text="@string/library_app"/>
    <Button
        android:id="@+id/build_it_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:layout_below="@id/library_app_button"
        android:text="@string/build_it_bigger"/>
    <Button
        android:id="@+id/bacon_reader_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:layout_below="@id/build_it_button"
        android:text="@string/bacon_reader"/>
    <Button
        android:id="@+id/capstone_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/ButtonStyle"
        android:layout_below="@id/bacon_reader_button"
        android:background="@color/colorButtonSecondary"
        android:text="@string/capstone"/>

</RelativeLayout>
